# datarobot-user-models

./: .gitattributes  .gitignore  .ignore  BRANCHING.yaml  CODEOWNERS  DEFINE-INFERENCE-MODEL.md  DRCODEOWNERS  Jenkinsfile  LICENSE  LICENSE.txt  MODEL-METADATA.md  Makefile  QUICKSTART-FOR-TASKS.md  QUICKSTART-FOR-TRAINING.md  README.md  RELEASE.yaml  VALIDATION-SCHEMA.md  config.sh  custom_model_tutorial.ipynb  custom_model_tutorial.md  custom_task_tutorial.ipynb  dependbot.yml  index.md  pipelineController.yaml  pyproject.toml  rebuild-all.sh  requirements.txt  requirements_dev.txt  requirements_for_per_framework_tests.txt  requirements_lint.txt  requirements_test.txt  requirements_test_e2e_training.txt  requirements_test_functional.txt  requirements_test_integration_general.txt  requirements_test_moderations.txt  requirements_test_unit.txt  results.tests.xml  run.sh  test.sh  testlist.txt  (+1 more)
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.harness/: PR.yaml  base_checks.yaml  base_checks_default_pr_input.yaml  build_env_base_docker_images.yaml  dr_mcp_execute_sandbox_minimal_image_build_default_pr_input.yaml  dr_mcp_execute_sandbox_minimal_image_build_pr_input.yaml  dr_mcp_execute_sandbox_minimal_on_pr.yaml  dr_mcp_execute_sandbox_minimal_on_push_master.yaml  dropin_env_base.yaml  dropin_env_base_jdk.yaml  dropin_env_base_jdk_ubi.yaml  dropin_env_base_r.yaml  drum_builder.yaml  env_image_publish.yaml  fips_java_codegen_default_pr_input.yaml  fips_java_codegen_image_build_default_pr_input.yaml  fips_pythin3_sklearn_default_pr_input.yaml  fips_python311_default_pr_input.yaml  fips_python311_genai_default_pr_input.yaml  fips_python311_genai_image_build_default_pr_input.yaml  fips_python311_image_build_default_pr_input.yaml  fips_python3_genai_default_pr_input.yaml  fips_python3_genai_image_build_default_pr_input.yaml  fips_python3_keras_default_pr_input.yaml  fips_python3_keras_image_build_default_pr_input.yaml  fips_python3_onnx_default_pr_input.yaml  fips_python3_onnx_image_build_default_pr_input.yaml  fips_python3_pmml_dafault_pr_input.yaml  fips_python3_pmml_image_build_default_pr_input.yaml  fips_python3_pytorch_default_pr_input.yaml  fips_python3_pytorch_image_build_default_pr_input.yaml  fips_python3_sklearn_default_pr_input.yaml  fips_python3_sklearn_default_pr_input2.yaml  fips_python3_sklearn_image_build_default_pr_input.yaml  fips_python3_xgboost_default_pr_input.yaml  fips_python3_xgboost_image_build_default_pr_input.yaml  fips_r_lang_default_pr_input.yaml  fips_r_lang_image_build_default_pr_input.yaml  gpu_vllm_default_pr_input.yaml  java_codegen_default_pr_input.yaml  (+138 more)
bump_env_info/: is-default.yaml  pipeline.yaml
charts/: Chart.yaml
custom_model_based_on_dr_scoring/: README.md  pom.xml
custom_model_runner/: .Rhistory  CHANGELOG.md  Makefile  README.md  automem.sh  drum_server_api.yaml  requirements.txt  setup.py  tox.ini
custom_model_runner.11.1/: Makefile  requirements.txt
drapps/: README.md  drapps  drapps.py  requirements.txt
fastapi_migration_plan/: CANARY_DEPLOYMENT.md  COMPATIBILITY_MATRIX.md  MILESTONES.md  OBSERVABILITY_MIGRATION.md  PERFORMANCE_BENCHMARKING.md  PHASED_IMPLEMENTATION_PLAN.md  REMOVING_FLASK_STRATEGY.md  ROLLBACK_PLAN.md  SECURITY_AUDIT.md  USER_MIGRATION_GUIDE.md
file_audit/: file_verification_list.md  generate_markdown.py  implementation.md
harness_scripts/: detect_changed_environments.sh
jenkins/: black_check.groovy  build_drum.groovy  integration_tests.groovy  run_black_check.sh  run_integration_tests_in_a_single_container.groovy  run_integration_tests_per_framework.groovy  run_integration_tests_without_container.groovy  steps.groovy  test3_drop_in_envs.sh  test3_inference_model_templates.sh  test3_mlpiper_custom_models.sh  test3_mlpiper_custom_models_without_container.sh  test3_training_model_templates.sh  test_drop_in_envs.groovy  test_drop_in_envs.sh  test_e2e_drop_in_envs.groovy  test_e2e_inference_model_templates.groovy  test_functional_general.groovy  test_functional_general.sh  test_functional_per_framework.groovy  test_functional_per_framework.sh  test_inference_model_templates.groovy  test_inference_model_templates.sh  test_integration.groovy  test_integration_general.groovy  test_integration_general.sh  test_integration_in_container.groovy  test_integration_in_container.sh  test_integration_per_framework.groovy  test_integration_per_framework.sh  test_integration_without_container.sh  test_training_model_templates.groovy  test_training_model_templates.sh  test_unit.groovy
model_python_sklearn_binary/: artifact.pkl
model_templates/: README.md
new_drum/: playground.py  transformer_playground.py
pps/: docker-compose.yml  manifest.json  mlops.agent.conf.yaml  pps.sh
public_dropin_environments/: Dockerfile  README.md  compare.sh  python3_sklearn.tar  rebuild.sh
public_dropin_environments/python311_genai_agents/: Dockerfile  Dockerfile.local  README.md  common-user-limits.sh  env_info.json  ipython_config.py  jupyter_kernel_gateway_config.py  pyproject.toml  requirements-genai.txt  requirements.in  requirements.txt  run_agent.py  run_agent_experimental.py  setup-ssh.sh  start_server_codespaces.sh  start_server_custom_model.sh  start_server_drum.sh
public_dropin_environments/python311_genai_agents/agent/: README.md  agent.py  cgroup_watchers.py  requirements-agent.txt
public_dropin_environments/python311_genai_agents/app_components/agent_crewai/: pyproject.toml
public_dropin_environments/python311_genai_agents/app_components/agent_generic_base/: pyproject.toml
public_dropin_environments/python311_genai_agents/app_components/agent_langgraph/: pyproject.toml
public_dropin_environments/python311_genai_agents/app_components/agent_llamaindex/: pyproject.toml
public_dropin_environments/python311_genai_agents/app_components/base/: pyproject.toml
public_dropin_environments/python311_genai_agents/app_components/infra/: pyproject.toml
public_dropin_environments/python311_genai_agents/extensions/: dataframe_formatter.py
public_dropin_gpu_environments/: README.md
tests/: README.md  (+2 more)
(+2436 files in other folders)
