[project]
name = "DockerContext"
version = "0.1.0"
description = "Implementation of DockerContext"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "datarobot-genai[crewai, dragent, drmcp, drtools, langgraph, llamaindex, nat]==0.14.4",
    "datarobot-moderations[all]==11.2.24",
    "datarobot-drum==1.17.11.post1",  # Lift upper limit after asyncio migration finished
    "datarobot-mlops==11.1.0",
    "langchain-litellm>=0.2.3",
    "opentelemetry-api>=1.33.0,<2.0.0",
    "opentelemetry-sdk>=1.33.0,<2.0.0",
    "anyio>=4.11.0,<4.12.0", # Fix: ImportError: `set_current_async_library`
    "packaging>=25.0,<26.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.6.1",
    "pytest-cov>=6.1.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=1.2.0",
    "requests-mock>=1.12.1",
    "ruff>=0.12.0",
    "types-requests>=2.32.4.20250913",
    "yamlfix>=1.17.0",
    "debugpy>=1.8.20",
]
# Additional dependencies required to run the agent in DataRobot Agentic playground
agentic_playground = [
    "fastapi[All]==0.118.2",
    "psutil==5.9.8",
    "ipykernel<6.29.0",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyter-kernel-gateway>=3.0.1",
    "ecs-logging>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "docker_context",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["PLC0415"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.yamlfix]
allow_duplicate_keys = true
line_length = 120

[tool.mypy]
strict = true
python_version = "3.11"
plugins = "pydantic.mypy"
exclude = """(?x)(
    output/ # exclude files starting with "output"
    | deployment_.*/
    | docker_context/
    | include/   # or files starting with "include."
    | venv/
    | .venv/
    | .cache
    | e2e/
    | tests/
    | build/
  )"""
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disable_error_code = ["typeddict-unknown-key"]
enable_error_code = "ignore-without-code"
implicit_reexport = true
ignore_missing_imports = true
no_implicit_optional = true
show_column_numbers = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "datarobot.*"
implicit_reexport = true
follow_imports = "skip"

[tool.uv]
required-version = ">=0.7.0"
override-dependencies = [
    # Compatibility
    "fastapi>=0.118.2,<0.133.0",  # 0.132 is the last version compatiable with NAT 1.4.1
    "starlette>=0.49.1,<1.0.0",  # 0.52.1 is the last version compatiable with NAT 1.4.1
    "pyarrow==21.0.0",
    # crewai and drum pin otel to 1.34.x but datarobot-moderations needs 0.60b1
    # instrumentation which requires otel 1.39.x. Override the entire otel family
    # to stay version-synchronized at 1.39.x / 0.60b1.
    "opentelemetry-api>=1.39.0,<2.0.0",
    "opentelemetry-sdk>=1.39.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-common>=1.39.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0,<2.0.0",
    # nvidia-nat-crewai==1.4.1 pins crewai<1.0.0 but datarobot-genai requires crewai>=1.1.0.
    # Override until nvidia-nat-crewai ships a fix upstream (BUZZOK-29844).
    # Upstream issue: https://github.com/NVIDIA/NeMo-Agent-Toolkit/issues/1802
    "crewai[litellm]>=1.11.0,<2.0.0",

    # Unlock latest langgprah
    "langgraph>=1.1.0,<2.0.0",
    "langgraph-prebuilt>=1.0.0,<2.0.0",

    # Keep this in sync with the ag-ui-protocol version in fastapi_server/pyproject.toml of the
    # recipe-datarobot-agent-application.
    "ag-ui-protocol==0.1.15",

    # CVE fixes
    "langgraph-checkpoint>=3.0.0",
    "litellm>=1.83.7,<2.0.0",
    "nltk>=3.9.4",
    "openai>=2.30.0",           # litellm >= 1.83.7 pins openai at 2.24, causing dependency rollback and re-introducing CVEs.
    "pdfminer.six>=20251230",
    "ragas>=0.4.3",

    # Excluded
    "annoy; sys_platform == 'never'",                   # not used, issues with building it
    "diskcache; sys_platform == 'never'",               # not used and having CVEs
    "fastembed; sys_platform == 'never'",               # not used; therefore removed
    "gevent; sys_platform == 'never'",                  # not used; therefore removed
    "langchain-milvus; sys_platform == 'never'",        # not used and having CVEs
    "llama-index-cli; sys_platform == 'never'",         # CLI tool pulled in by llama-index; not needed at runtime
    "onnxruntime; sys_platform == 'never'",             # not used; therefore removed
    "openpyxl; sys_platform == 'never'",                # Excel parser pulled in by crewai-tools; not used
    "pymilvus; sys_platform == 'never'",                # not used and having CVEs
    "python-docx; sys_platform == 'never'",             # Word doc parser pulled in by crewai-tools; not used
    "pytube; sys_platform == 'never'",                  # YouTube downloader pulled in by crewai-tools; not used
    "stagehand; sys_platform == 'never'",               # Playwright web automation pulled in by crewai-tools; not used
    "youtube-transcript-api; sys_platform == 'never'",  # YouTube transcripts pulled in by crewai-tools; not used
    "uv; sys_platform == 'never'",                      # package manager bundled by crewai; runtime unnecessary
]
package = true
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux'",
  "sys_platform == 'win32'"
]

# This can be set to allow for proxy indexes in air-gapped environments
# [[tool.uv.index]]
# name = "mirror"
# url = "https://mirror_url/"

[dependency-groups]
extras = []


[tool.setuptools.packages.find]
include = ["agent*"]
