[project]
name = "DockerContext"
version = "0.1.0"
description = "Implementation of DockerContext"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "datarobot-genai[crewai, dragent, drmcp, drtools, langgraph, llamaindex, nat, auth]==0.24.0",
    "datarobot-mlops==11.1.28",
    "datarobot[core]>=3.17.0,<4.0.0",  # We use getenv to load runtime parameter values, and there are important bugfixes in 3.17
    "gunicorn>=25.0.0"  # We require this to run dragent workers in deployments
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.6.1",
    "pytest-cov>=6.1.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=1.2.0",
    "requests-mock>=1.12.1",
    "ruff>=0.12.0",
    "types-requests>=2.32.4.20250913",
    "yamlfix>=1.17.0",
    "debugpy>=1.8.20",
]
# Additional dependencies required to run the agent in DataRobot Agentic playground
agentic_playground = [
    "psutil>=7.2.1",
    "ipykernel<6.29.0",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyter-kernel-gateway>=3.0.1",
    "ecs-logging>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "docker_context",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["PLC0415"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.yamlfix]
allow_duplicate_keys = true
line_length = 120

[tool.mypy]
strict = true
# Intentionally no `python_version` pin: the CI matrix runs mypy under
# 3.11/3.12/3.13 and, unset, mypy targets the running interpreter so each leg
# type-checks against its own version. Pinning to 3.11 would make every leg
# parse against 3.11 semantics, which rejects the PEP 695 `type` statement in
# numpy 2.5.x's stubs (installed only on 3.12+).
plugins = "pydantic.mypy"
exclude = """(?x)(
    output/ # exclude files starting with "output"
    | deployment_.*/
    | docker_context/
    | include/   # or files starting with "include."
    | venv/
    | .venv/
    | .cache
    | e2e/
    | tests/
    | build/
  )"""
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disable_error_code = ["typeddict-unknown-key"]
enable_error_code = "ignore-without-code"
implicit_reexport = true
ignore_missing_imports = true
no_implicit_optional = true
show_column_numbers = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "datarobot.*"
implicit_reexport = true
follow_imports = "skip"

[tool.uv]
required-version = ">=0.7.0"
constraint-dependencies = [
    # Keep this in sync with the ag-ui-protocol version in fastapi_server/pyproject.toml of the
    # recipe-datarobot-agent-application.
    "ag-ui-protocol==0.1.15",

    # CVE fixes constraints. Keep ordered please.
    "aiohttp>=3.14.1",
    "joserfc>=1.6.8",
    "langchain>=1.3.9",
    "langgraph-checkpoint>=4.1.1",
    # ragas 0.4.3 (pulled in by datarobot-genai) unconditionally imports
    # `langchain_community.chat_models.vertexai.ChatVertexAI` at module load, but that module
    # was removed in langchain-community 0.4.2. ragas leaves its langchain deps unpinned, so the
    # `langchain>=1.3.9` CVE floor above otherwise drags langchain-community up to 0.4.2 and the
    # import crashes. Cap below 0.4.2 (0.4.1 still ships the module) until ragas drops the import.
    "langchain-community>=0.4.1,<0.4.2",
    "langsmith>=0.8.18",
    "mcp>=1.28.1",
    "mistune>=3.3.0",
    "nltk>=3.10.0",
    "openai>=2.30.0",
    "pdfminer.six>=20251230",
    "pip>=26.1.2",
    "PyJWT>=2.13.0",
    "pypdf>=6.13.3",
    "python-multipart>=0.0.31",
    "ragas>=0.4.3",
    "soupsieve>=2.8.4",
    "starlette>=1.3.1",
]
override-dependencies = [
    # crewai and drum pin otel to 1.34.x but we need the latest.
    # Override the entire otel family to stay version-synchronized at 1.43.x/0.64b.0
    "opentelemetry-api>=1.43.0,<2.0.0",
    "opentelemetry-sdk>=1.43.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-common>=1.43.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0,<2.0.0",
    "opentelemetry-instrumentation>=0.64b0,<0.65",

    # nvidia-nat-core hard-pins cryptography<47 and PyJWT<2.13 across all stable releases.
    # Overrides are required to force CVE-safe versions until NAT relaxes their upper bounds.
    "cryptography>=48.0.1",
    "PyJWT>=2.13.0",

    # nvidia-nat prevents `litellm` upgrade over 1.85, but `datarobot-genai` already expects >=1.91.1
    "litellm>=1.91.1,<2.0.0",

    # crewai prevents upgrade of `python-dotenv` and `json-repair`
    "json-repair>=0.60.1",
    "python-dotenv>=1.2.2",

    # crewai 1.15.4 (required for the mcp>=1.28.1 CVE floor) pins aiofiles~=24.1 while
    # nvidia-nat-core 1.7.0 requires aiofiles>=25.1 — irreconcilable as declared.
    "aiofiles>=25.1,<26",

    # Excluded
    "gevent; sys_platform == 'never'",  # not used; therefore removed
    "onnxruntime; sys_platform == 'never'",  # not used; therefore removed
    "fastembed; sys_platform == 'never'",  # not used; therefore removed
    "langchain-milvus; sys_platform == 'never'",  # not used and having CVEs
    "pymilvus; sys_platform == 'never'",  # not used and having CVEs
    "diskcache; sys_platform == 'never'",  # not used and having CVEs
    "annoy; sys_platform == 'never'",  # not used, issues with building it
    "uv; sys_platform == 'never'",  # not a runtime dependency
    "build; sys_platform == 'never'",  # Python build system pulled in by crewai; runtime unnecessary
    "kubernetes; sys_platform == 'never'",  # K8s client pulled in by crewai-tools; not used
    "stagehand; sys_platform == 'never'",  # Playwright web automation pulled in by crewai-tools; not used
    "pytube; sys_platform == 'never'",  # YouTube downloader pulled in by crewai-tools; not used
    "youtube-transcript-api; sys_platform == 'never'",  # YouTube transcripts pulled in by crewai-tools; not used
    "lancedb; sys_platform == 'never'",  # optional vector DB pulled in by crewai; not used
    "openpyxl; sys_platform == 'never'",  # Excel parser pulled in by crewai-tools; not used
    "python-docx; sys_platform == 'never'",  # Word doc parser pulled in by crewai-tools; not used
    "llama-index-cli; sys_platform == 'never'",  # CLI tool pulled in by llama-index; not needed at runtime
    "scikit-network; sys_platform == 'never'",  # graph analysis pulled in by ragas; not used
    # nemoguardrails — server / CLI stack pulled in via datarobot-moderations[all]; not used at runtime
    "watchdog; sys_platform == 'never'",  # file watcher for guardrails hot-reload; not used
    # prompt-toolkit and wcwidth are intentionally NOT excluded: IPython (via ipykernel / agentic_playground)
    # has a hard import-time dependency on prompt-toolkit; excluding it causes ModuleNotFoundError at runtime.
    "typer; sys_platform == 'never'",  # CLI framework for guardrails CLI; not used
    "shellingham; sys_platform == 'never'",  # shell detection; sole dependent was typer
    # deepeval — CLI / reporting stack pulled in via datarobot-moderations[all]; not used at runtime
    "pyfiglet; sys_platform == 'never'",  # ASCII banner renderer for deepeval CLI; not used
    "wheel; sys_platform == 'never'",  # build-time packaging tool; not a runtime dependency
    "datarobot-early-access; sys_platform == 'never'",  # randomly overlaps the core `datarobot`
]
package = true
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux'",
  "sys_platform == 'win32'"
]

# This can be set to allow for proxy indexes in air-gapped environments
# [[tool.uv.index]]
# name = "mirror"
# url = "https://mirror_url/"

[dependency-groups]
extras = []


[tool.setuptools.packages.find]
include = ["agent*"]
